--- a/hw project.html
+++ b/hw project.html
@@ -7,17 +7,33 @@
     
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
     </script>
-    <title>Sales!</title>
+    <title>My hobbies</title>
 </head>
 <body>
-    <div class="container bg-danger p-5 my-5 " style="
+    <h1 class="display-3" style="text-align: center; ">My hobbies!</h1>
+    <div class="container bg-primary" style="
     border-radius: 40px; 
-    border: 5px solid maroon;
-    box-shadow: -10px 15px 10px rgb(79, 4, 4);">
-        <h1 class="display-3 text-warning" style="font-weight: bold;
-        text-shadow: -5px 5px 5px rgb(116, 104, 10);">50% SALES!!</h1>
-        <p>50% off for the start of school! Hurry up to buy school supplies right now</p>
+    border: 5px solid rgb(6, 66, 136);
+    box-shadow: -10px 15px 10px rgb(4, 28, 82);">
+        <h1 class="display-4 text-black" style="font-weight: bold;">Programming💻</h1>
+        <p>Programming is one of my favourite hobbies. I wanna learn more programming languages and make webcites in the future! I'm really good at programming! </p>
     </div>
+    <br><br><br>
 
+    <div class="container bg-success" style="
+    border-radius: 40px; 
+    border: 5px solid rgb(4, 101, 28);
+    box-shadow: -10px 15px 10px rgb(4, 82, 44);">
+    <h1 class="display-4 text-black" style="font-weight: bold;">Drawing🖌️</h1>
+    <p> I also love drawing. Not that im really good at it but if i really want to draw something I will draw it very good </p>
+</div><br><br><br>
+
+    <div class="container bg-secondary" style="
+        border-radius: 40px; 
+        border: 5px solid rgb(61, 63, 62);
+        box-shadow: -10px 15px 10px rgb(40, 45, 43);">
+        <h1 class="display-4 text-black" style="font-weight: bold;">Playing/making games</h1>
+        <p> I think playing or making games also could be my hobby because I play different games a lot! And also I'm making one on Roblox Studio Platform. </p>
+    </div>
 </body>
 </html>
